[package]
name = "port_mapping_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { git = "https://github.com/microsoft/windows-rs.git", features = [
    "Win32_System_Com",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Variant",
    "Win32_System_Ole",
] }

[profile.dev]
opt-level = 3
